--- a/index.html
+++ b/index.html
@@ -591,7 +591,6 @@
               </div>
             </div>
 
-
             <!-- Healthapp -->
             <div class="grid grid-cols-3 gap-3 mb-5 pt-5">
               <div class="col-span-2">
@@ -611,32 +610,7 @@
                   <li>3. Select pharmacy > pay > deliver!</li>
                 </ul>
               </div>
-              <div class="grid gap-2">
-                <a target="_blank" href="/dist/images/projects/mosito-01.png">
-                  <img class="h-auto max-w-full rounded shadow" src="/dist/images/projects/mosito-01.png"
-                    alt="LinguaCulture">
-                </a>
-                <div class="grid grid-cols-4 gap-2">
-                  <a target="_blank" href="/dist/images/projects/mosito-02.png">
-                    <img class="aspect-square rounded shadow" src="/dist/images/projects/mosito-02.png"
-                      alt="LinguaCulture">
-                  </a>
-                  <a target="_blank" href="/dist/images/projects/mosito-03.png">
-                    <img class="aspect-square	 rounded shadow" src="/dist/images/projects/mosito-03.png"
-                      alt="LinguaCulture">
-                  </a>
-                  <a target="_blank" href="/dist/images/projects/mosito-04.png">
-                    <img class="aspect-square	 rounded shadow" src="/dist/images/projects/mosito-04.png"
-                      alt="LinguaCulture">
-                  </a>
-                  <a target="_blank" href="/dist/images/projects/mosito-05.png">
-                    <img class="aspect-square	 rounded shadow" src="/dist/images/projects/mosito-05.png"
-                      alt="LinguaCulture">
-                  </a>
-                </div>
-              </div>
             </div>
-
 
             <!-- Mosito -->
             <div class="grid grid-cols-3 gap-3 mb-5 pt-5">
@@ -761,13 +735,33 @@
                 <div>
                   Full-Stack Developer · 2017 ~ 2019 <br />
                   Laravel, Vue2, Vuetify<br />
-                  Java Android (Client Application)
+                  Java Android MVVM (Client Application)
                 </div>
                 <ul class="text-gray-600 dark:text-white/50">
                   <li>1. Company office automation (MehrGostar)</li>
                   <li>2. Marketer, Customer management</li>
                   <li>3. Accounting</li>
                   <li>4. Online insurance reserve</li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- SahanCC -->
+            <div class="grid grid-cols-3 gap-3 mb-5 pt-5">
+              <div class="col-span-2">
+                <div class="text-lg font-bold">
+                  SahanCC
+                </div>
+                <a rel="noopener" class="text-sm underline " target="_blank">
+                  an Android application to find discounts
+                </a>
+                <div>
+                  Full-Stack Developer · 2018 ~ 2019 <br />
+                  Laravel<br />
+                  Java Android MVVM (Client Application)
+                </div>
+                <ul class="text-gray-600 dark:text-white/50">
+                  <li>1. A huge application without anything special</li>
                 </ul>
               </div>
             </div>
@@ -784,7 +778,7 @@
                 <div>
                   Full-Stack Developer · 2018 ~ 2019 <br />
                   Laravel, VueJs Bootstrap <br />
-                  Java Android (Client Application)
+                  Java Android MVVM (Client Application)
                 </div>
                 <ul class="text-gray-600 dark:text-white/50">
                   <li>1. They told me to not describe these two</li>
