--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                       d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.751.751 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z">
                     </path>
                   </svg>
-                  <span class="ms-1">Updated: 2023, August, 10 </span>
+                  <span class="ms-1">Updated: 8 Jan 2024 </span>
                 </li>
               </ul>
             </div>
@@ -213,14 +213,11 @@
             <div id="bio" class="mt-5 ">
               <h1 class="text-xl font-bold mb-1">About</h1>
               <p class="text-italic text-gray-600 dark:text-white/70 md:w-4/6" lang="en">
-                Full-Stack and mobile application developer with 10 years of
-                experience. Technologies that I'm currently working with are
-                (Laravel, Nuxt.js, Node.js, and Java Android).
-                <br />
-                If you're looking for a skilled professional who can deliver
-                innovative solutions that drive success for your online
-                business, then look no further than my comprehensive expertise
-                and proven track record.
+                With a decade of experience as a Full-Stack and mobile application developer, I bring a wealth of
+                expertise in crafting innovative solutions that propel online businesses to success. Currently, I
+                specialize in technologies such as Laravel, Nuxt.js, Node.js, and Java Android. My proven track record
+                showcases my commitment to delivering high-quality and effective solutions. If you're seeking a skilled
+                professional to elevate your digital ventures, your search ends here.
               </p>
             </div>
           </div>
