--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/dist/app.css" rel="stylesheet" />
-  <title>Mehdi Rajabi</title>
+  <title>Ali Namazi Esfahani</title>
 
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="/icon.ico" />
+  <link rel="icon" type="image/x-icon" href="/icon.ico" />
 
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu" />
@@ -74,12 +74,12 @@
         <div class="flex flex-col items-center justify-center py-12">
           <div class="text-exl font-extrabold text-center">
             <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-              Mehdi Rajabi
+              Ali Namazi Esfahani
             </span>
           </div>
           <div class="border-t border-slate-200 h-12 dark:border-slate-900 inline-flex pt-5">
             <a rel="noopener noreferrer" title="email" class="hover:text-blue-600 duration-150 px-2" target="_blank"
-              href="mailto:96rajabi@gmail.com">
+              href="mailto:aliwpna@gmail.com">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
                 <path d="M1.5 8.67v8.58a3 3 0 003 3h15a3 3 0 003-3V8.67l-8.928 5.493a3 3 0 01-3.144 0L1.5 8.67z" />
                 <path
@@ -97,7 +97,7 @@
             </a>
 
             <a rel="noopener noreferrer" title="github" class="hover:text-blue-600 duration-150 px-2" target="_blank"
-              href="https://github.com/rajabit">
+              href="https://github.com/Volcanocoder">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240" class="w-8 h-8" fill="currentColor">
                 <g transform="translate(0.000000,240.000000) scale(0.100000,-0.100000)" stroke="none">
                   <path d="M970 2301 c-305 -68 -555 -237 -727 -493 -301 -451 -241 -1056 143
@@ -117,7 +117,7 @@
             </a>
 
             <a class="hover:text-blue-600 duration-150 px-2" target="_blank" rel="noopener noreferrer" title="linkedin"
-              href="https://www.linkedin.com/in/96rajabi">
+              href="https://ir.linkedin.com/in/ali-namazi-esfahani-534972215?original_referer=https%3A%2F%2Fwww.google.com%2F">
               <?xml version="1.0" ?>
               <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'>
               <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32"
@@ -155,9 +155,9 @@
         <div
           class="bg-white dark:bg-zinc-900 grid grid-cols-4 gap-3 rounded-md border border-slate-200 dark:border-slate-900 overflow-hidden p-5 shadow-lg">
           <div class="col-span-4 md:col-span-1 grid grid-cols-2">
-            <img alt="mehdi rajabi"
+            <img alt="Ali Namazi"
               class="col-span-2 sm:col-span-1 md:col-span-2 mx-auto rounded shadow-md border text-sm border-slate-200 mb-2 w-48 h-48 dark:border-slate-900"
-              src="https://avatars.githubusercontent.com/u/25779946" />
+              src="https://avatars.githubusercontent.com/u/77337706?v=4" />
 
             <div class="col-span-2 sm:col-span-1 md:col-span-2 h-full flex items-center justify-center">
               <ul class="list-inside list-none text-gray-600 text-sm dark:text-white/70">
@@ -176,8 +176,8 @@
                       d="M1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25v-8.5C0 2.784.784 2 1.75 2ZM1.5 12.251c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V5.809L8.38 9.397a.75.75 0 0 1-.76 0L1.5 5.809v6.442Zm13-8.181v-.32a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25v.32L8 7.88Z">
                     </path>
                   </svg>
-                  <a class="ms-1" href="mailto:96rajabi@gmail.com">
-                    96rajabi@gmail.com
+                  <a class="ms-1" href="mailto:aliwpna@gmail.com">
+                    aliwpna@gmail.com
                   </a>
                 </li>
 
@@ -188,7 +188,7 @@
                       d="M6.75 2.25A.75.75 0 017.5 3v1.5h9V3A.75.75 0 0118 3v1.5h.75a3 3 0 013 3v11.25a3 3 0 01-3 3H5.25a3 3 0 01-3-3V7.5a3 3 0 013-3H6V3a.75.75 0 01.75-.75zm13.5 9a1.5 1.5 0 00-1.5-1.5H5.25a1.5 1.5 0 00-1.5 1.5v7.5a1.5 1.5 0 001.5 1.5h13.5a1.5 1.5 0 001.5-1.5v-7.5z"
                       clipRule="evenodd" />
                   </svg>
-                  <span class="ms-1">Born: 1996, September, 5</span>
+                  <span class="ms-1">Born: 2000, October, 1</span>
                 </li>
 
                 <li class="flex items-center mb-1">
@@ -207,7 +207,7 @@
             <h1 class="text-xl font-bold mb-2">Github contributions</h1>
 
             <div class="overflow-hidden rounded px-2 py-2 select-none w-[820px] h-36 bg-white">
-              <iframe title="git" class="w-[800px]" src="https://notion-github-embed.vercel.app/chart/rajabit"></iframe>
+              <iframe title="git" class="w-[800px]" src="https://notion-github-embed.vercel.app/chart/Volcanocoder"></iframe>
             </div>
 
             <div id="bio" class="mt-5 ">
