edite some link

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                 <a title="PentaMedia" href="https://PentaMedia.ir">
 
-                  <img alt="PentaMedia" width="200" src="/dist/images/penta.png" />
+                  <img alt="PentaMedia" width="200" height="100" src="/dist/images/penta.png" />
                 </a>
               </div>
               <p class="text-gray-600 dark:text-white/50 italic">
@@ -309,12 +309,17 @@
               <div class="flex mb-5">
                 <div class="block grow">
                   <h2 class="font-bold text-lg">Frontend Developer</h2>
+                  <a title="ilisha" href="https://ilisha.ir">
                   <label>Tosee Fanavari Arses Ilia · Full-time</label>
+                </a>
                   <div class="text-gray-600 dark:text-white/50">
                     Jun 2020 - Dec 2023 · 3 yrs & 5 mos, Esfahan, Iran
                   </div>
                 </div>
+                <a title="ilisha" href="https://ilisha.ir">
+
                 <img alt="ilisha" width="100" class="rounded-full" src="/dist/images/ico.png" />
+                </a>
               </div>
               <p class="text-gray-600 dark:text-white/50 italic">
                 I have been involved in many projects, life cycles, from design
