--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
             <div id="bio" class="mt-5 ">
               <h1 class="text-xl font-bold mb-1">About</h1>
               <p class="text-italic text-gray-600 dark:text-white/70 md:w-4/6" lang="en">
-                With a decade of experience as a Full-Stack and mobile application developer, I bring a wealth of
-                expertise in crafting innovative solutions that propel online businesses to success. Currently, I
-                specialize in technologies such as Laravel, Nuxt.js, Node.js, and Java Android. My proven track record
-                showcases my commitment to delivering high-quality and effective solutions. If you're seeking a skilled
-                professional to elevate your digital ventures, your search ends here.
+                With 6 years of experience as a full-stack developer and mobile apps, I bring a wealth of experience
+                  Expertise in creating innovative solutions that drive online businesses to success. At the moment, I
+                  Expertise in technologies such as Flutter, ASP.NET, Laravel, Nuxt.js, Node.js and Java Android. My steady record
+                  It shows my commitment to providing high quality and effective solutions. If you are looking for a skilled person
+                  A professional to enhance your digital investments, your search ends here.
               </p>
             </div>
           </div>
@@ -605,26 +605,26 @@
               </div>
             </div>
 
-            <!-- Mosito -->
+            <!-- Odin -->
             <div class="grid grid-cols-3 gap-3 mb-5 pt-5">
               <div class="col-span-2">
                 <div class="text-lg font-bold">
-                  Mosito
+                  Odin
                 </div>
                 <a rel="noopener" class="text-sm underline text-blue-600" target="_blank" href="https://mosito.ir">
-                  Online persian music stream
+                  Odin is a platform in two versions for communication between students and advisors, along with dozens of interesting and useful educational features.
                 </a>
                 <div>
-                  Full-Stack Developer · 2019 ~ 2021 <br />
-                  Laravel, Vue2, Vuetify
+                  Mobile Developer · 2021 ~ 2023 <br />
+                  Flutter,GetX
                 </div>
                 <ul class="text-gray-600 dark:text-white/50">
-                  <li>1. Auto import, and sync musics</li>
-                  <li>2. Multilingual</li>
+                  <li>1. Two separate applications Students/Consultant</li>
+                  <li>2. Record the course report and send it to the consultant</li>
                   <li>3. Dark, Light support</li>
-                  <li>4. Using telegram as storage</li>
-                  <li>5. Fully classified database</li>
-                  <li>6. 800K monthly viewers before ban</li>
+                  <li>4. Using GetX architecture</li>
+                  <li>5. Ability to analyze and review experimental tests</li>
+                  <li>6. 100K yearly active subscribers</li>
                 </ul>
               </div>
               <div class="grid gap-2">
